syntax = "proto2";

package proto2_proto;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.gostring_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.verbose_equal_all) = true;
// option (gogoproto.goproto_stringer_all) = false;
// option (gogoproto.stringer_all) =  true;
// option (gogoproto.populate_all) = true;
// option (gogoproto.testgen_all) = true;
// option (gogoproto.benchgen_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

message Message
{
  enum Humour {
	option (gogoproto.goproto_enum_prefix) = false;
    UNKNOWN = 0;
    PUNS = 1;
    SLAPSTICK = 2;
    BILL_BAILEY = 3;
  }

  optional string name = 1 [(gogoproto.nullable) = false];
  optional Humour hilarity = 2[(gogoproto.nullable) = false];
  optional uint32 height_in_cm = 3[(gogoproto.nullable) = false];
  optional bytes data = 4;
  optional int64 result_count = 7[(gogoproto.nullable) = false];
  optional bool true_scotsman = 8[(gogoproto.nullable) = false];
  optional float score = 9[(gogoproto.nullable) = false];

  repeated uint64 key = 5[packed = true];
}

